tests/init/neg/promotion-loop.check
-- Error: tests/init/neg/promotion-loop.scala:16:10 --------------------------------------------------------------------
16 |  println(b)      // error
   |          ^
   |          Cannot prove the argument is fully initialized.
   |
   |          Promoting the value to fully initialized failed due to the following problem:
   |          Cannot prove that the field val outer is fully initialized. Calling trace:
   |          -> println(b)      // error	[ promotion-loop.scala:16 ]
   |                     ^
